most of the agentmovement is done